retrieveUnpackaged/objects/Team__c.object
<CustomObject>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reason_No_Longer_in_Use__c</fullName>
        <label>Reason No Longer in Use</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Created_By__c</fullName>
        <formula>CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Name__c</fullName>
        <formula>Unit__r.Name &amp; &quot;-&quot; &amp;   TEXT(Team_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Number__c</fullName>
        <label>Team Number</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Team_Terminated_By__c</fullName>
        <label>Team Terminated By</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Type__c</fullName>
        <label>Team Type</label>
        <picklist>
            <picklistValues>
                <fullName>Firefighting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Composite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red Cross</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit</label>
        <referenceTo>Unit__c</referenceTo>
        <relationshipLabel>Teams</relationshipLabel>
        <relationshipName>Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Team</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T-{00000}</displayFormat>
        <label>Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Effective_Date__c &gt;  End_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>End date must be after the effective date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reason_No_Longer_in_Use</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(ISBLANK(  End_Date__c  )),
ISBLANK(  Reason_No_Longer_in_Use__c  ))</errorConditionFormula>
        <errorDisplayField>Reason_No_Longer_in_Use__c</errorDisplayField>
        <errorMessage>required if &quot;end date&quot; is entered</errorMessage>
    </validationRules>
</CustomObject>